Designing the whole page

--- a/index.html
+++ b/index.html
@@ -22,8 +22,31 @@
           <br />
           <input type="text" name="user-cash" id="user-cash" />
           <br />
-          <button id="submit" type="submit">getChange</button>
+          <button id="submit" type="submit">Change</button>
         </h2>
+        <table>
+          caption.
+          <tr>
+            <th class="change-section">Change</th>
+            <td class="change">2000</td>
+            <td class="change">500</td>
+            <td class="change">100</td>
+            <td class="change">20</td>
+            <td class="change">10</td>
+            <td class="change">5</td>
+            <td class="change">1</td>
+          </tr>
+          <tr>
+            <th class="count-section">Count</th>
+            <td class="changeCount">0</td>
+            <td class="changeCount">0</td>
+            <td class="changeCount">0</td>
+            <td class="changeCount">0</td>
+            <td class="changeCount">0</td>
+            <td class="changeCount">0</td>
+            <td class="changeCount">0</td>
+          </tr>
+        </table>
       </div>
     </header>
     <script type="text/js" src="main.js"></script>
