adding reset sound

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <input type="text" name="user-cash" id="user-cash" />
           <br />
           <button id="submit" type="submit">Change</button>
+          <button id="reset" type="reset">reset</button>
           <p id="output"></p>
         </h2>
         <br />
