--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <audio src="sound/vintage-info-message.mp3" id="infoSE"></audio>
       <audio src="sound/fail-trumpet.mp3" id="failSE"></audio>
       <audio src="sound/tada.mp3" id="successSE"></audio>
+      <audio src="sound/reset.mp3" id="resetSE"></audio>
       <!-- Footer (START) -->
       <div class="footer-container">
         <!-- Footer Head -->
